syntax = "proto3";

package mcube.event;
option go_package = "github.com/infraboard/mcube/bus/event";

import "google/protobuf/any.proto";
import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

enum Level {
	TRACE = 0; 
	DEBUG = 1;
    INFO = 2;
    WARN = 3;
    ERROR = 4;
    CRITICAL = 5;
    DISASTER = 6;
}

enum Type {
    // 全局配置, 所有服务可以读取
    OPERATE = 0;
    // 组内配置, 组里面的服务可以读取
	STATUS = 1;
}

enum ContentType {
    // Body采用probuf编码, 默认
    PROTOBUF = 0;
    // 采用Json编码
    JSON = 1;
}

// Event to be used by controllers.
message Event {
    // 事件ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 事件类型
    Type type = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
    // 事件头
    Header header = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"header" json:"header"'}
        ];
    // data 具体的数据
    google.protobuf.Any body = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"body"'}
        ];
}

message Header {
    // 事件发送时间
    int64 time = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"time" json:"time"'}
        ];
    // 请求ID
    string request_id = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"request_id" json:"request_id"'}
        ];
    // 事件来源
    string source = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"source" json:"source"'}
        ];
    // 用户UA
    string user_agent = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_agent" json:"user_agent"'}
        ];
    // 操作者IP
    string ip_address = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"ip_address" json:"ip_address"'}
        ];
    // 事件等级
    Level level = 4[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"level" json:"level"'}
        ];
    // Body编码格式
    ContentType content_type = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"content_type" json:"content_type"'}
            ];
    // 数据metas
    map<string, string> meta = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"meta" json:"meta"'}
        ];
}

// OperateEvent 事件具体数据
message OperateEventData {
    // 回话ID
    string session = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"session" json:"session"'}
        ];
    // 操作人
    string account = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"account" json:"account"'}
        ];
    // 用户名称
    string user_name = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_name" json:"user_name"'}
        ];
    // 用户类型
    string user_type = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_type" json:"user_type"'}
        ];
    // 操作的域
    string user_domain = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"user_domain" json:"user_domain"'}
        ];
    // 服务名称
    string service_name = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"service_name" json:"service_name"'}
        ];
    // 功能路径
    string feature_path = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"feature_path" json:"feature_path"'}
        ];
        // 资源类型
    string resource_type = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"resource_type" json:"resource_type"'}
        ];
    // 操作动作
    string action = 10[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"action" json:"action"'}
        ];
    // 操作耗时, 单位毫秒
    int64 cost = 13[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"cost" json:"cost"'}
        ];
    // 事件数据
    string request = 11[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"request" json:"request,omitempty"'}
        ];
    // 事件数据
    string response = 12[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"response" json:"response,omitempty"'}
        ];
}

message OperateEvent {
    // 事件ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 事件保存时间
    int64 save_at = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"save_at" json:"save_at"'}
        ];
    // 事件类型
    Type type = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
    // 事件头
    Header header = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"header" json:"header"'}
        ];
    // 操作事件数据
    OperateEventData body = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"body" json:"body"'}
        ];
}

